# geo_object_conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  test_main.cpp
docs/: HowToUseConanCLI.md  HowToWriteCMakeListFile.md
include/geo_object/: geo_object.h
src/: CMakeLists.txt  geo_object.c
test_package/: CMakeLists.txt  conanfile.py  example.cpp
